[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "petta-memory"
version = "0.1.0"
description = "PLN-ready intermediate PeTTa/MeTTa memory store prototype"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Benjamin Goertzel and collaborators"}]


[tool.setuptools.packages.find]
where = ["src"]
